# cocobolo

./: .gitignore  .hlint.yaml  README.md  cocobolo.cabal  default.nix  shell.nix
.github/workflows/: cabal.yml  nix.yml
app/: Main.hs
examples/: all-apply.ccb  all-id.ccb  all-k.ccb  all-variations.ccb  amb.ccb  ap.ccb  apply.ccb  assign.ccb  box-literal.ccb  complex-patmatch.ccb  cons.ccb  deref.ccb  duplicate.ccb  effectsafe.ccb  evenlength.ccb  evenodd.ccb  exit.ccb  extract.ccb  fibonacci.ccb  fmap.ccb  hole.ccb  identity.ccb  imperative.ccb  io.ccb  k.ccb  letfun.ccb  letin.cbb  letmap.ccb  list.ccb  map.ccb  morehole.ccb  name-a-string.ccb  nestedletin.ccb  pure-square.ccb  pure.ccb  recursive.ccb  redeclare-ref.ccb  safe-fibo.ccb  safeList.ccb  safeMap.ccb  (+12 more)
nix/: sources.json
src/: Assumptions.hs  Capability.hs  Cocobolo.hs  Fresh.hs  Infer.hs  Lower.hs  Main.hs  Options.hs  Pretty.hs  Syntax.hs  Type.hs
src/Control/Lens/: NonEmpty.hs
src/Control/Monad/: Fresh.hs
src/Debug/Trace/: Pretty.hs
src/Surface/: Lexer.hs  Loc.hs  Parser.hs  Surface.hs
