cabal-version:       2.4

name:                cocobolo
version:             0.1.0.0
synopsis:            Safety in a unsafe-by-default language
description:         Safety in a unsafe-by-default language
license:             NONE
author:              Jiří Beneš
maintainer:          Jiří Beneš <mail@jiribenes.com>
build-type:          Simple
tested-with:         GHC == 8.10.7

source-repository head
  type:             git
  location:         https://github.com/jiribenes/cocobolo.git

common common-options
  build-depends:       base >= 4.13 && < 5, lens, containers, unordered-containers, mtl, transformers, text, prettyprinter, optparse-applicative, megaparsec, parser-combinators
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Cocobolo,
                       Assumptions,
                       Capability,
                       Infer,
                       Lower,
                       Pretty,
                       Surface.Lexer,
                       Surface.Loc,
                       Surface.Parser,
                       Surface.Surface,
                       Syntax,
                       Type

  other-modules:       Control.Monad.Fresh, 
                       Control.Lens.NonEmpty,
                       Debug.Trace.Pretty

executable cocobolo
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       cocobolo
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
